feat(dev): Update Dockerfile

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PUPPETEER_EXECUTABLE_PATH="/Applications/Google Chrome.app/Contents/MacOS/Google Chrome"
+PUPPETEER_EXECUTABLE_PATH="/usr/bin/chromium"
 WEB_RES_SCREENSHOT_BASE_PATH=./screenshot
-WEB_RES_SECURITY_READ=$WEB_RES_SCREENSHOT_BASE_PATH
-WEB_RES_SECURITY_WRITE=$WEB_RES_SCREENSHOT_BASE_PATH
+WEB_RES_SECURITY_READ=/deno,$WEB_RES_SCREENSHOT_BASE_PATH
+WEB_RES_SECURITY_WRITE=/tmp,$WEB_RES_SCREENSHOT_BASE_PATH
 WEB_RES_SECURITY_NET=deno.land,jspm.dev,$WEB_RES_TARGET
