--- a/.env.defaults
+++ b/.env.defaults
@@ -1,3 +1,3 @@
-WEB_RES_SCREENSHOT_BASE_PATH=./screenshot
+WEB_RES_SCREENSHOT_BASE_PATH=./screenshots
 WEB_RES_SECURITY_READ=.env,.env.defaults,/deno,$$WEB_RES_SCREENSHOT_BASE_PATH/
 WEB_RES_SECURITY_WRITE=/tmp,$$WEB_RES_SCREENSHOT_BASE_PATH/
